[tool.poetry]
name = "pki-tools"
version = "0.0.0"
description = "PKI tools for e.g. checking certificate CRL/OCSP revocation"
authors = ["Michal Sadowski <misad90@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent"
]
readme = "README.md"
homepage = "https://github.com/fulder/pki-tools"
repository = "https://github.com/fulder/pki-tools"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fulder/pki-tools/issues"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = ">=39.0.1,<43.0.0"
loguru = "^0.7.2"
pydantic = "^2.7.4"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
pytz = "^2024.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
smokeshow = "^0.4.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = ">=0.0.289,<0.4.11"

[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
pymdown-extensions = "^10.8"

[tool.poetry.group.apitest.dependencies]
httpx = "^0.27.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
addopts = "--cov=pki_tools --cov-report term-missing --cov-report=html -v -n auto"

[tool.ruff]
line-length = 79

[tool.ruff.per-file-ignores]
"./pki_tools/__init__.py" = ["F401"]
"./pki_tools/types/__init__.py" = ["F401"]
"./pki_tools/funcs/__init__.py" = ["F401"]
"./docs/examples/src/*" = ["E402"]